@@ -10,7 +10,6 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.geom.Point2D;
 import java.awt.geom.RoundRectangle2D;
-import java.awt.image.BufferedImage;
 import java.util.ArrayList;
 
 import edu.colorado.phet.buildafraction.model.BuildAFractionModel;
@@ -18,22 +17,14 @@ import edu.colorado.phet.buildafraction.model.pictures.PictureLevel;
 import edu.colorado.phet.buildafraction.model.pictures.PictureTarget;
 import edu.colorado.phet.buildafraction.view.BuildAFractionCanvas;
 import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
-import edu.colorado.phet.common.phetcommon.model.Bucket;
-import edu.colorado.phet.common.phetcommon.model.property.integerproperty.IntegerProperty;
-import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
-import edu.colorado.phet.common.phetcommon.view.Dimension2DDouble;
-import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
-import edu.colorado.phet.common.phetcommon.view.util.BufferedImageUtils;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.RichPNode;
-import edu.colorado.phet.common.piccolophet.nodes.BucketView;
 import edu.colorado.phet.common.piccolophet.nodes.FaceNode;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLImageButtonNode;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.colorado.phet.fractions.util.FJUtils;
-import edu.colorado.phet.fractions.view.SpinnerButtonNode;
 import edu.colorado.phet.fractionsintro.common.view.AbstractFractionsCanvas;
 import edu.colorado.phet.fractionsintro.intro.model.Fraction;
 import edu.colorado.phet.fractionsintro.intro.view.FractionNode;
@@ -47,7 +38,6 @@ import edu.umd.cs.piccolo.util.PDimension;
 
 import static edu.colorado.phet.buildafraction.view.pictures.ContainerNode._getFractionValue;
 import static edu.colorado.phet.buildafraction.view.pictures.ContainerNode._isInTargetCell;
-import static edu.colorado.phet.fractions.FractionsResources.Images.*;
 import static fj.function.Booleans.not;
 
 /**
@@ -61,10 +51,9 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
     private final PDimension STAGE_SIZE;
     private final List<Target> targetPairs;
     private final RichPNode toolboxNode;
-    private final PNode frontLayer;
     private final VBox faceNodeDialog;
     public final int levelIndex;
-    private final BucketView bucketView;
+//    private final BucketView bucketView;
 
     public PictureSceneNode( int levelIndex, final PNode rootNode, final BuildAFractionModel model, final PDimension STAGE_SIZE, final PictureSceneContext context ) {
         this.rootNode = rootNode;
@@ -125,92 +114,40 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
 
         //Add a piece container toolbox the user can use to get containers
         toolboxNode = new RichPNode() {{
-            final PhetPPath border = new PhetPPath( new RoundRectangle2D.Double( 0, 0, 450, 160, 30, 30 ), BuildAFractionCanvas.CONTROL_PANEL_BACKGROUND, BuildAFractionCanvas.controlPanelStroke, Color.darkGray );
+            final PhetPPath border = new PhetPPath( new RoundRectangle2D.Double( 0, 0, 780, 160, 30, 30 ), BuildAFractionCanvas.CONTROL_PANEL_BACKGROUND, BuildAFractionCanvas.controlPanelStroke, Color.darkGray );
             addChild( border );
             setOffset( AbstractFractionsCanvas.INSET, AbstractFractionsCanvas.STAGE_SIZE.height - AbstractFractionsCanvas.INSET - this.getFullHeight() );
         }};
         addChild( toolboxNode );
 
         PictureLevel level = model.getPictureLevel( levelIndex );
-        for ( Integer denominator : level.containers ) {
-            ContainerNode containerNode = new ContainerNode( this, denominator, this );
-            int row = ( denominator - 1 ) / 3;
-            int column = ( denominator - 1 ) % 3;
-            containerNode.setInitialPosition( toolboxNode.getFullBounds().getX() + AbstractFractionsCanvas.INSET + column * 150,
-                                              toolboxNode.getFullBounds().getY() + row * 80 + AbstractFractionsCanvas.INSET );
-            PictureSceneNode.this.addChild( containerNode );
-        }
 
-        //Create the bucket
-        Dimension2DDouble littleBucket = new Dimension2DDouble( 250, 100 );
-        Bucket bucket = new Bucket( ( AbstractFractionsCanvas.STAGE_SIZE.width ) / 2 + 100, -STAGE_SIZE.getHeight() + littleBucket.getHeight(), littleBucket, Color.green, "" );
-        bucketView = new BucketView( bucket, ModelViewTransform.createSinglePointScaleInvertedYMapping( new Point2D.Double( 0, 0 ), new Point2D.Double( 0, 0 ), 1 ) );
-        addChild( bucketView.getHoleNode() );
-
-        final IntegerProperty selectedPieceSize = new IntegerProperty( 1 );
+        DynamicContainerNode dynamicContainerNode = new DynamicContainerNode( this ) {{
+            setOffset( 285, 200 );
+        }};
+        addChild( dynamicContainerNode );
 
         //Pieces in the bucket
         //Pieces always in front of the containers--could be awkward if a container is moved across a container that already has pieces in it.
         List<List<Integer>> groups = level.pieces.group( Equal.intEqual );
+        int groupIndex = 0;
         for ( List<Integer> group : groups ) {
             int numInGroup = group.length();
-            int index = 0;
+            int pieceIndex = 0;
+
             for ( final Integer pieceDenominator : group ) {
                 double dx = 4;
                 double totalHorizontalSpacing = dx * ( numInGroup - 1 );
                 LinearFunction offset = new LinearFunction( 0, numInGroup - 1, -totalHorizontalSpacing / 2, +totalHorizontalSpacing / 2 );
                 final RectangularPiece piece = new RectangularPiece( pieceDenominator, PictureSceneNode.this );
-                final double delta = numInGroup == 1 ? 0 : offset.evaluate( index );
-                piece.setInitialPosition( bucketView.getHoleNode().getFullBounds().getCenterX() - piece.getFullBounds().getWidth() / 2 + delta,
-                                          bucketView.getHoleNode().getFullBounds().getCenterY() - piece.getFullBounds().getHeight() / 2 + delta );
+                final double delta = numInGroup == 1 ? 0 : offset.evaluate( pieceIndex );
+                piece.setInitialState( toolboxNode.getFullBounds().getX() + 20 + delta + groupIndex * 140,
+                                       toolboxNode.getFullBounds().getY() + 20 + delta, 0.75 );
                 PictureSceneNode.this.addChild( piece );
-                selectedPieceSize.addObserver( new VoidFunction1<Integer>() {
-                    public void apply( final Integer selectedPieceSize ) {
-                        boolean inInitialPosition = piece.isAtInitialPosition();
-                        boolean matchesSelection = selectedPieceSize.equals( pieceDenominator );
-                        final boolean visible = !inInitialPosition || matchesSelection;
-                        piece.setVisible( visible );
-                        piece.setPickable( visible );
-                        piece.setChildrenPickable( visible );
-                    }
-                } );
-                index++;
+                pieceIndex++;
             }
+            groupIndex++;
         }
-
-        frontLayer = new PNode() {{
-            addChild( bucketView.getFrontNode() );
-
-            final double buttonInset = 20;
-            final VoidFunction1<Boolean> decrement = new VoidFunction1<Boolean>() {
-                public void apply( final Boolean autoSpinning ) {
-                    selectedPieceSize.decrement();
-                }
-            };
-            final PBounds bucketBounds = bucketView.getFrontNode().getFullBounds();
-            addChild( new SpinnerButtonNode( spinnerImage( LEFT_BUTTON_UP ), spinnerImage( LEFT_BUTTON_PRESSED ), spinnerImage( LEFT_BUTTON_GRAY ), decrement, selectedPieceSize.greaterThan( 1 ) ) {{
-                setOffset( bucketBounds.getMinX() + buttonInset, bucketBounds.getCenterY() - getFullBounds().getHeight() / 2 );
-            }} );
-            final VoidFunction1<Boolean> increment = new VoidFunction1<Boolean>() {
-                public void apply( final Boolean autoSpinning ) {
-                    selectedPieceSize.increment();
-                }
-            };
-            addChild( new SpinnerButtonNode( spinnerImage( RIGHT_BUTTON_UP ), spinnerImage( RIGHT_BUTTON_PRESSED ), spinnerImage( RIGHT_BUTTON_GRAY ), increment, selectedPieceSize.lessThan( 6 ) ) {{
-                setOffset( bucketBounds.getMaxX() - getFullBounds().getWidth() - buttonInset, bucketBounds.getCenterY() - getFullBounds().getHeight() / 2 );
-            }} );
-
-            addChild( new PNode() {{
-                selectedPieceSize.addObserver( new VoidFunction1<Integer>() {
-                    public void apply( final Integer selectedSize ) {
-                        removeAllChildren();
-                        addChild( new PieceIconNode( selectedSize ) );
-                        centerFullBoundsOnPoint( bucketBounds.getCenterX(), bucketBounds.getCenterY() );
-                    }
-                } );
-            }} );
-        }};
-        addChild( frontLayer );
 
         faceNodeDialog = new VBox( new FaceNode( 300 ), new HTMLImageButtonNode( "Next", new PhetFont( 20, true ), Color.orange ) {{
             addActionListener( new ActionListener() {
@@ -238,10 +175,6 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
             }
         }
         return List.iterableList( children );
-    }
-
-    public static BufferedImage spinnerImage( final BufferedImage image ) {
-        return BufferedImageUtils.multiScaleToWidth( image, 50 );
     }
 
     public void endDrag( final ContainerNode containerNode, final PInputEvent event ) {
@@ -300,11 +233,8 @@ public class PictureSceneNode extends PNode implements ContainerContext, PieceCo
         }
 
         //If didn't intersect a container, see if it should go back to the bucket
-        if ( !droppedInto &&
-             ( piece.getGlobalFullBounds().intersects( bucketView.getHoleNode().getGlobalFullBounds() ) ||
-               piece.getGlobalFullBounds().intersects( bucketView.getFrontNode().getGlobalFullBounds() ) ) ) {
+        if ( !droppedInto ) {
             piece.animateHome();
-            frontLayer.moveToFront();
         }
         else if ( !droppedInto && piece.getGlobalFullBounds().intersects( toolboxNode.getGlobalFullBounds() ) ) {
             piece.animateToPositionScaleRotation( piece.getXOffset(), piece.getYOffset() - 100, 1, 0, 200 );
