@@ -1,3 +1,4 @@
+Build a Fraction: Started new UI with a tool box for multiple piece sizes and a single container in the center that can be broken into different numbers of subdivisions
 Build a Fraction: Added standalone app for build a fraction
 Fraction Matcher: Expanded ninja star a little bit
 Fraction Matcher: Added ninja star for level 8 and as a new representation
